# Splice

./: .gitignore  README.md  docker-compose.yaml  makefile
.github/workflows/: ci.yaml  http_unit_test.go
backend/: go.work  go.work.sum
backend/pipeline-tests/: e2e_integration_test.go  go.mod  go.sum  idempotency_integration_test.go  load_integration_test.go  test_helpers.go
backend/pipeline-tests/helpers/: http.go  nats.go  services.go  storage.go  video.go
backend/scene-detector/: pyproject.toml
backend/scene-detector/src/: service.py
backend/scene-detector/src/core/: logging.py  settings.py
backend/scene-detector/src/handler/: http_server.py  messages.py  subscriber.py
backend/scene-detector/src/nats/: client.py  connection.py  messages.py  publisher.py  subscriber.py
backend/scene-detector/src/processing/: job.py  messages.py  nats_msg.py  video.py
backend/scene-detector/src/storage/: check_health.py  queries.py
backend/scene-detector/tests/: conftest.py
backend/scene-detector/tests/fixtures/: helpers.py  kv.py  nats.py  setup_nats.py  storage.py
backend/scene-detector/tests/integration/: test_check_health.py  test_client.py  test_fetch_video.py  test_http_server.py  test_nats_connect.py  test_nats_msg.py  test_publisher.py  test_split_into_chunks.py  test_start_service.py  test_subscriber.py  test_upload_video_chunks.py
backend/scene-detector/tests/unit/: test_client.py  test_fetch_video.py  test_http_server.py  test_nats_connect.py  test_nats_msg.py  test_process_job.py  test_publisher.py  test_split_into_chunks.py  test_start_service.py  test_subscriber.py  test_upload_video_chunks.py
backend/shared/: go.mod  go.sum  makefile
backend/shared/go/: go.mod  go.sum  makefile
backend/shared/go/handler/: http.go  http_unit_test.go  nats_messages.go  subscriber_integration_test.go
backend/shared/go/kv/: helpers.go  helpers_unit_test.go  job_status_kv.go  (+2 more)
backend/shared/handler/: nats_messages.go  publisher.go  publisher_integration_test.go  publisher_unit_test.go  subscriber.go  subscriber_unit_test.go
backend/shared/kv/: job_status_kv_integration_test.go  job_status_kv_unit_test.go  msg_processed_kv.go  msg_processed_kv_integration_test.go
backend/shared/middleware/: cors.go  cors_unit_test.go
backend/shared/python/: makefile  pyproject.toml
backend/shared/python/src/shared_core/: logging.py  settings.py
backend/shared/python/src/shared_handler/: connection.py  http_server.py  kv.py  messages.py  nats.py  publisher.py
backend/shared/python/src/shared_storage/: check_health.py  queries.py
backend/shared/python/tests/: conftest.py
backend/shared/python/tests/fixtures/: http.py  nats.py  storage.py
backend/shared/python/tests/integration/: test_check_health.py  test_consumer.py  test_fetch_video.py  test_nats_connect.py  test_publisher.py  test_upload_video.py  test_upload_video_chunks.py
backend/shared/python/tests/unit/: test_consumer.py  test_fetch_video.py  test_http_server.py  test_nats_connect.py  test_publisher.py  test_upload_video.py
backend/shared/service/: config.go  config_unit_test.go
backend/shared/storage/: queries.go
backend/shared/test/: jetstream_mocks.go  kv_helpers.go  middleware_helpers.go  nats_helpers.go  service_helpers.go  storage_helpers.go
backend/transcoder-worker/: go.mod  go.sum
backend/transcoder-worker/cmd/: helpers_test.go  main.go  main_integration_test.go  main_test.go  main_unit_test.go  makefile
backend/video-recombiner/: go.mod
backend/video-recombiner/cmd/: helpers_test.go  main.go  main_integration_test.go  main_test.go  main_unit_test.go  makefile
backend/video-status/: go.mod  go.sum
backend/video-status/cmd/: helpers_test.go  main.go  main_integration_test.go  main_unit_test.go  makefile
backend/video-upload/: go.mod  go.sum
backend/video-upload/cmd/: helpers_test.go  main.go  main_integration_test.go  main_unit_test.go  makefile
backend/video-upscaling/: pyproject.toml
backend/video-upscaling/src/: service.py
backend/video-upscaling/src/core/: logging.py  settings.py
backend/video-upscaling/src/processing/: batch.py  load_model.py  nats_msg.py  video.py  worker.py
backend/video-upscaling/src/utils/: metrics.py  model_router.py
backend/video-upscaling/tests/: conftest.py
backend/video-upscaling/tests/fixtures/: nats_helpers.py  processing_helpers.py  service_helpers.py
backend/video-upscaling/tests/integration/: test_load_model.py  test_service.py  test_video.py
backend/video-upscaling/tests/unit/: test_batch.py  test_load_model.py  test_model_router.py  test_nats_msg.py  test_service.py  test_video.py  test_worker.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: fileUploadDropZone.tsx  header.tsx  navigation.tsx  processedVideoList.tsx  processedVideos.tsx  uploadVideosList.tsx  videoDisplayPanel.tsx  videoDownloadButton.tsx  videoHeader.tsx  videoList.tsx  videoListButtons.tsx  videoListItems.tsx  videoProgressBar.tsx  videoUploadButton.tsx  videoUploadPanel.tsx  videoUploadQueue.tsx
frontend/src/hooks/: useJobPolling.ts  useUploadQueue.ts
frontend/src/state/: videoQueue.ts
frontend/src/types/: video.ts
frontend/src/utils/: fileDisplay.ts  fileUpload.ts  videoResolution.ts
(+148 files in other folders)
