[project]
name = "video-upscaling"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "structlog",
    "requests",
    "opencv-python-headless",
    "nats-py",
    "realesrgan>=0.3.0",
    "torch",
    "torchvision",
    "basicsr-fixed",
    "pydantic-settings>=2.13.1",
]

[tool.uv.workspace]
members = [
    "video-upscaling",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
