[project]
name = "video-upscaling"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "structlog",
    "requests",
    "opencv-python-headless",
    "nats-py",
    "realesrgan>=0.3.0",
    "torch",
    "torchvision",
    "basicsr-fixed",
    "pydantic-settings>=2.13.1",
    "shared_python"
]

[tool.uv.sources]
shared_python = { path = "../shared/python", editable = true }
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.pyrefly]
python-version = "3.13"
untyped-def-behavior = "check-and-infer-return-any"
search-path = [".", "../shared/python/src"]
venv = ".venv"

[tool.uv.workspace]
members = [
    "video-upscaling",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pyrefly.errors]
unannotated-parameter = "error"
unannotated-return = "error"
unannotated-attribute = "error"
implicit-any = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers",
]

[tool.ruff]                                                                                                                                                                             
exclude = ["src/processing/video.py"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]
