[project]
name = "shared_python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nats-py>=2.14.0",
    "pydantic-settings>=2.14.0",
    "pytest-asyncio>=1.3.0",
    "structlog>=25.5.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["shared_core*", "shared_handler*", "shared_storage*"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "testcontainers[nats]>=4.14.2",
]
